# windytalk

./: .env.example  .gitignore  CLAUDE.md  README.md  VISION.html  agent.py  audio.py  config.py  hands.py  jarvis.py  pyproject.toml  requirements.txt  run.sh  selftest.py  ui_bridge.py
agents/: README.md  __init__.py  connect.py  windyfly.py
apps/: README.md
auth/: README.md  eternitas.py
brains/: README.md  __init__.py  base.py  mind.py
contracts/: README.md  control.mcp.v1.json  engine.mcp.v1.json  hands.mcp.v1.json  mcp-conformance.v1.json  telemetry.v1.json  voice-session.v1.md  weave.json
desktop/: capture.js  index.html  main.js  package.json
docs/: ADR-058-foundation.md  CONTROL_BUILD_NOTES.md  CONTROL_KICKOFF_PROMPT.md  CONTROL_SURFACE_DESIGN.md  DNA_STRAND_MASTER_PLAN.md  GAP_CLOSING_PLAN.md  KICKOFF_PROMPT.md  PACKAGING.md  PROBE_RESULTS.md
engine/: README.md  control.py  latency.py  pipeline.py  requirements.txt  segment.py  server.py  session.py  tools.py  vad.py
gauntlet/: README.md  __init__.py  runner.py
hands/: PORTABILITY.md  README.md  __init__.py  __main__.py  coords.py  surface.py  tiers.py  vision.py  wizard.py
providers/: __init__.py  base.py  local.py
reference/: README-REFERENCE.md  README.md  jarvis.py  wake.py
scripts/: build-payload.sh  chaos.sh  ci.sh  gen-update-key.sh  install-client.sh  install-launcher.sh  os_probe.py  publish-release.sh  run-client.sh  run_gauntlet.sh
server/: README.md  admin.py  license_test.py  supervise.py  veron_server.py
telemetry/: README.md  emit.py
tests/: conftest.py  test_connect.py  (+20 more)
(+108 files in other folders)
